--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,43 @@
+@font-face {
+  font-family: 'Shentox';
+  src: url('/fonts/Shentox-Thin.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Shentox';
+  src: url('/fonts/Shentox-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Shentox';
+  src: url('/fonts/Shentox-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Shentox';
+  src: url('/fonts/Shentox-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Shentox';
+  src: url('/fonts/Shentox-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Shentox', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100%;
   height: 100%;
